<resources>
    <string name="app_name">Dogisitter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="register_button">Create an account</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>


    <!--    Activity Register-->
    <string name="Admin">Admin</string>
    <string name="Client">Client</string>

    <!--   Activity Admin Main-->
    <string name="Welcome">Welcome !!!</string>
    <string name="addTrip">Add Trip</string>
    <string name="Edit">Edit</string>
    <string name="gif_image">dog walker_gif</string>
    <string name="pass_forget">Forget your password?</string>
    <string name="image">logo image</string>
    <string name="remember_box">Remember me</string>


    <!--  Activity Add Trip  -->
    <string name="create_a_trip">Create A Trip</string>

    <string name="Trip_Name">Trip Name</string>
    <string name="prompt_Trip_Name">Trip Name</string>

    <string name="Meeting_Place">Meeting Place</string>
    <string name="Prompt_Meeting_Place">Meeting Place </string>

    <string name="Date">Date</string>
    <string name="prompt_Date">Date</string>

    <string name="Time">Time</string>
    <string name="Prompt_Time">Time</string>

    <string name="Duration">Duration</string>
    <string name="Prompt_Duration">Duration (In Minutes)</string>

    <string name="Capacity">Capacity</string>
    <string name="Prompt_Capacity">Capacity</string>

    <string name="Description">Description</string>
    <string name="Prompt_Description">Description</string>


    <!--    Activity Edit Profile-->

    <string name="Back_Button">Back</string>
    <string name="New_Dog">New Dog</string>

    <!--    Activity view trips menu -->
    <string name="activity_main_bottom_screen_logout">Logout</string>
    <string name="activity_main_bottom_screen_progress">My trips</string>
    <string name="activity_main_bottom_screen_profile">Profile</string>
    <string name="activity_main_bottom_screen_dummy">Dummy</string>
</resources>