<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    tools:context=".PopActivity">





    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="278dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/infoLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                app:srcCompat="@drawable/common_full_open_on_phone" />
        </RelativeLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="407dp"
        android:layout_height="373dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/joinTripButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/popName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Trip_Name"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/popDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/popTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/popDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Duration"
                android:textSize="24sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/popCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Current Capacity"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/popLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="24sp">
            </TextView>

        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/joinTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="joinTrip"
        android:text="Join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>